<resources>
    <string name="app_name">Twitter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cree_un_compte">cree un compte</string>
    <string name="string_pseudo">pseudo</string>
    <string name="string_password">password</string>
    <string name="string_log_in">Log in</string>
    <string name="string_seconnecter">Se connecter</string>
    <string name="string_creeuncompte">Créer un compte</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="messToast">Veuillez remplir les champs</string>
</resources>
